--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>itcastTax</display-name>
+  
+  <!-- struts2过滤器配置 -->
+<filter>
+     <filter-name>loginFilter</filter-name>   
+     <filter-class>cn.itcast.core.filter.LoginFilter</filter-class>
+</filter>
+<filter-mapping>
+     <filter-name>loginFilter</filter-name>
+     <url-pattern>*.action</url-pattern>
+</filter-mapping>
+
   <filter>
      <filter-name>struts2</filter-name>   
      <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
